2009-01-07  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Migo/Migo.Net/AsyncWebClient.cs: Patch from Benjamín
	Valero Espinosa fixing bug with not handling the XML encoding attribute
	properly; RSS feeds in non-UTF-8 should now parse correctly (BGO #538224)

2009-01-01  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Gui/GtkUtilities.cs: Add both upper and
	lowercase versions of file extensions to the file chooser filter, so that
	my.MP3 will appear in the Local Files import dialog (BGO #566224).

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Migo/Migo.Syndication/RssParser.cs: If RFC 822 datetime
	parsing fails, try falling back to parsing the pubDate etc with
	DateTime.TryParse (BGO #561381)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseQueryFilterModel.cs:
	Update to new QueryField api - will probably need some work when we
	re-enable other filters (genre browser, etc).

	* src/Libraries/Hyena/Hyena.Query/QueryField.cs: Based on patch from
	Félix Velasco, fix case-sensitivity bug with genre and other string
	matching (BGO #555120)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Patch from John
	Millikin fixing bug encoding/scrobbling non-ASCII info (BGO #539963)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Libraries/Hyena.Gui/Hyena.Widgets/ImageButton.cs: Patch from Wouter
	Bolsterlee fixing mnemonic support (BGO #557880)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting.Data/PodcastTrackInfo.cs:
	Fix bug with the published date of a playing podcast episode not getting
	loaded/displayed properly (BGO #565863)

2008-12-29  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Collection.Database/DatabaseAlbumInfo.cs: 